--- a/index.html
+++ b/index.html
@@ -42,15 +42,26 @@
                         <a href="#/actors">Actors</a>
                     </li>
                 </ul>
-                <form class="navbar-form navbar-right" role="search">
+                <form id="search-box" class="navbar-form navbar-right" role="form">
+
                     <div class="input-group input-group-sm">
-                      <input type="text" class="form-control" placeholder="Search">
+                      <div class="input-group-btn">
+                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                            <span class="capitalize" data-bind="label">Movies</span>
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu">
+                          <li><a href="#">Movies</a></li>
+                          <li><a href="#">Actors</a></li>
+                        </ul>
+                      </div><!-- /btn-group -->
+                      <input type="text" name="query" class="form-control" placeholder="Search">
                       <span class="input-group-btn">
-                        <button class="btn btn-default" type="button">
+                        <button class="btn btn-default" type="submit">
                             <span class="glyphicon glyphicon-search"></span>
                         </button>
                       </span>
-                    </div><!-- /input-group -->
+                    </div>
 
                 </form>
             </div>
@@ -69,6 +80,8 @@
 							<div id="actors-list"></div>
 							<div id="actor-edit"></div>
 							<div id="actor-detail"></div>
+                            <div id="search-movies-list"></div>
+                            <div id="search-actors-list"></div>
                         </section>
                         
                         <footer style="display: block;">
