--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
 <!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en">
+<!--<![endif]-->
+
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title></title>
-	<meta name="description" content="">
-	<meta name="author" content="">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-	<meta name="viewport" content="width=device-width,initial-scale=1">
-    <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css">
-	
-  <link rel="stylesheet" href="css/styles.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="css/styles.css">
 
-	<script data-main="js/main" src="js/libs/require/require.js"></script>
+    <script data-main="js/main" src="js/libs/require/require.js"></script>
 </head>
+
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
@@ -45,22 +46,25 @@
                 <form id="search-box" class="navbar-form navbar-right" role="form">
 
                     <div class="input-group input-group-sm">
-                      <div class="input-group-btn">
-                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                            <span class="capitalize" data-bind="label">Movies</span>
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" role="menu">
-                          <li><a href="#">Movies</a></li>
-                          <li><a href="#">Actors</a></li>
-                        </ul>
-                      </div><!-- /btn-group -->
-                      <input type="text" name="query" class="form-control" placeholder="Search">
-                      <span class="input-group-btn">
-                        <button class="btn btn-default" type="submit">
-                            <span class="glyphicon glyphicon-search"></span>
-                        </button>
-                      </span>
+                        <div class="input-group-btn">
+                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                                <span class="capitalize" data-bind="label">Movies</span>
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="#">Movies</a>
+                                </li>
+                                <li><a href="#">Actors</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- /btn-group -->
+                        <input type="text" name="query" class="form-control" placeholder="Search">
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" type="submit">
+                                <span class="glyphicon glyphicon-search"></span>
+                            </button>
+                        </span>
                     </div>
 
                 </form>
@@ -70,30 +74,31 @@
         <!-- /.container -->
     </nav>
     <div class="container">
-                <div class="row">
-                    <div id="cinephileapp" class="col-lg-12">
-                        <section id="content" style="display: block;">
-							<div id="recent-movies"></div>                       
-							<div id="movies-list"></div>
-							<div id="movie-edit"></div>
-							<div id="movie-detail"></div>
-							<div id="actors-list"></div>
-							<div id="actor-edit"></div>
-							<div id="actor-detail"></div>
-                            <div id="search-movies-list"></div>
-                            <div id="search-actors-list"></div>
-                        </section>
-                        
-                        <footer style="display: block;">
+        <div class="row">
+            <div id="cinephileapp" class="col-lg-12">
+                <section id="content" style="display: block;">
+                    <div id="recent-movies"></div>
+                    <div id="movies-list"></div>
+                    <div id="movie-edit"></div>
+                    <div id="movie-detail"></div>
+                    <div id="actors-list"></div>
+                    <div id="actor-edit"></div>
+                    <div id="actor-detail"></div>
+                    <div id="search-movies-list"></div>
+                    <div id="search-actors-list"></div>
+                </section>
 
-                        </footer>
-                    </div>
-                </div>
+                <footer style="display: block;">
+
+                </footer>
+            </div>
+        </div>
     </div>
     <div class="footer">
-      <div class="container">
-        <p class="text-muted">Copyright © Cinephile 2014</p>
-      </div>
+        <div class="container">
+            <p class="text-muted">Copyright © Cinephile 2014</p>
+        </div>
     </div>
 </body>
+
 </html>
